--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.Proyect"
         tools:targetApi="31">
         <activity
-            android:name=".Productos"
+            android:name=".activities.ActivityProductos"
             android:exported="false" />
         <activity
-            android:name=".ConsultarUsuario"
+            android:name=".activities.ActivityConsultarUsuario"
             android:exported="false" />
         <activity
-            android:name=".Registro"
+            android:name=".activities.ActivityRegistro"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".activities.ActivityLogin"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
