--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:name=".activities.ActivityConsultarUsuario"
             android:exported="false" />
         <activity
+            android:name=".activities.ActivityCarritoDeCompras"
+            android:exported="false" />
+        <activity
             android:name=".activities.ActivityRegistro"
             android:exported="false" />
         <activity
